[!] fix scroller gap wo controls

--- a/design/themes/aurora/css/addons/aurora/category.less
+++ b/design/themes/aurora/css/addons/aurora/category.less
@@ -97,6 +97,9 @@ Category page
         .ty-grid-list__price {
             height: 67px;
         }
+        .owl-wrapper-outer {
+            margin-top: 42px;
+        }
     }
     &__promotions {
         --grid-width-min: 280px;
